--- a/env.example
+++ b/env.example
@@ -2,4 +2,5 @@ RESEND_API_KEY=your_actual_resend_api_key_here
 FROM_EMAIL=Car Rental <onboarding@resend.dev>
 TO_EMAIL=oneeb593@gmail.com
 NODE_ENV=development
+PORT=3001
 
